--- a/ThreadsLocks/Puzzle/pom.xml
+++ b/ThreadsLocks/Puzzle/pom.xml
@@ -20,5 +20,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <exec.mainClass>com.paulbutcher.Puzzle</exec.mainClass>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 </project>
